unpackaged/main/default/objects/Entretien__c/Entretien__c.object-meta.xml
<CustomObject>
    <label>Entretien</label>
    <nameField>
        <displayFormat>E-{0000}</displayFormat>
        <label>Numéro d&#39;entretien</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Entretiens</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>