unpackaged/main/default/objects/Entretien__c/fields/Concerne__c.field-meta.xml
<CustomField>
    <fullName>Concerne__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Concerné</label>
    <type>Checkbox</type>
</CustomField>