unpackaged/main/default/objects/Entretien__c/fields/Date_entretien__c.field-meta.xml
<CustomField>
    <fullName>Date_entretien__c</fullName>
    <label>Date entretien</label>
    <type>Date</type>
</CustomField>