unpackaged/main/default/objects/Entretien__c/fields/Hr_Km__c.field-meta.xml
<CustomField>
    <fullName>Hr_Km__c</fullName>
    <label>Hr/Km</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>