unpackaged/main/default/objects/Entretien__c/fields/Hr_Km_planifie__c.field-meta.xml
<CustomField>
    <fullName>Hr_Km_planifie__c</fullName>
    <label>Hr/Km planifié</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>