unpackaged/main/default/objects/Entretien__c/fields/Parc__c.field-meta.xml
<CustomField>
    <fullName>Parc__c</fullName>
    <label>Parc</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Asset.RecordTypeId</field>
            <operation>equals</operation>
            <value>Parc - Container, Parc</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Entretiens</relationshipLabel>
    <relationshipName>Entretiens</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>