unpackaged/main/default/objects/Entretien__c/fields/Prochain_type__c.field-meta.xml
<CustomField>
    <fullName>Prochain_type__c</fullName>
    <label>Prochain type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>