unpackaged/main/default/objects/Entretien__c/fields/Prochaine_date__c.field-meta.xml
<CustomField>
    <fullName>Prochaine_date__c</fullName>
    <label>Prochaine date</label>
    <type>Date</type>
</CustomField>