unpackaged/main/default/objects/Entretien__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Chassis</fullName>
            </value>
            <value>
                <fullName>Frigo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>